- fixed scrolling bug on content panel - changed navigation visuals - navigation now only shows when interacting w/ component in question; otherwise is collapsed

--- a/transport2055/src/styles/Content.css
+++ b/transport2055/src/styles/Content.css
@@ -5,19 +5,21 @@
 
   width: 450px;
   max-width: calc(100vw - 2rem);
-  max-height: calc(100vh - 6rem);
+  /* max-height: calc(100vh - 6rem); */
 
   background: rgba(0,0,0,0.85);
   color: white;
 
-  padding: 1rem 3rem 1rem 1rem;
+  padding: 1rem 0rem 1rem 1rem;
 
-  /* border-radius: 12px; */
+  border-radius: 15px;
   padding: 1rem;
 
   z-index: 1000;
 
   pointer-events: auto;
+
+  overflow: visible;
 
   float: left;
   
@@ -33,6 +35,14 @@
     width: 100%;
     padding: 0.5rem 1rem;
   }
+}
+
+.content-scroll {
+  max-height: calc(100vh - 6rem);
+
+  overflow-y: auto;
+
+  padding-right: 1rem;
 }
 
 .content h1,
