--- a/transport2055/src/styles/Navigation.css
+++ b/transport2055/src/styles/Navigation.css
@@ -92,7 +92,7 @@
 /*unordered list containing buttons of modes*/
 .nav-root {
   display: flex;
-  gap: 1.5rem;
+  /* gap: 1.5rem; */
   list-style: none;
   padding: 0;
   margin: 0;
@@ -102,6 +102,8 @@
   left: 0;
   background: rgba(0, 0, 0, 0.9);
   backdrop-filter: blur(8px);
+
+  border-radius: 15px;
 }
 
 .nav-root.collapsed {
@@ -126,8 +128,11 @@
   left: 0;
   background: black;
   border: 1px solid #ddd;
+  border-radius: 15px;
   min-width: 200px;
   z-index: 1000;
+  list-style: none;
+  opacity: 0.9;
 }
 
 @media (hover: none) {
